--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <a href="./zakladna_udrzba.html">Zakladná údržba</a>
             </div>
         </section>
-        <h4 class="sluzby-des"><i>Cena je bez DPH <br> Cena je orientačná</i></h4>
+        <h4 class="sluzby-des"><i>Ceny sú uvedené bez DPH</i></h4>
     </div>
     
     <!-- Section O nas -->
