--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section id="sluzby" class="sluzby">
             <h1>Naše služby</h1>
             <p>
-            Radi sa postaráme o Vaše vozidlo a doprajeme mu špičkovú starostlivosť. Pre Nezáväznú cenovú pnuku nás kontaktujte. Tešíme sa na Vás. 
+            Radi sa postaráme o Vaše vozidlo a doprajeme mu špičkovú starostlivosť. Pre Nezáväznú cenovú ponuku nás kontaktujte. Tešíme sa na Vás. 
             </p>
         </section>
     </div>
