--- a/wrap_folia.html
+++ b/wrap_folia.html
@@ -51,7 +51,16 @@
         <div class="wrapper">
             <i id="left" class="fa-solid fa-angle-left fa-lg" style="color: #121212;"></i>
             <div class="carousel">
-                <img src="./img/uvod_fotka_1.jpg" draggable="false">
+                <img src="./img/wrap_folia_1.jpg" draggable="false">
+                <img src="./img/wrap_folia_2.jpg" draggable="false">
+                <img src="./img/wrap_folia_3.jpg" draggable="false">
+                <img src="./img/wrap_folia_5.jpg" draggable="false">
+                <img src="./img/wrap_folia_6.jpg" draggable="false">
+                <img src="./img/wrap_folia_7.jpg" draggable="false">
+                <img src="./img/wrap_folia_8.jpg" draggable="false">
+                <img src="./img/wrap_folia_9.jpg" draggable="false">
+                <img src="./img/wrap_folia_10.jpg" draggable="false">
+                <img src="./img/wrap_folia_12.jpg" draggable="false">
             </div>
             <i id="right" class="fa-solid fa-angle-right fa-lg" style="color: #121212;"></i>
         </div>
