--- a/wrap_folia.html
+++ b/wrap_folia.html
@@ -42,7 +42,7 @@
             <li>- Ponúkame premiové autofólie s 7 ročnou zárukou. </li>
             <li>- Zmena farby vozidla</li>
             <li>- Dechróm ( chromové doplnky na čiernú lesklú) <li>
-            <h4 class="cennik"><i>Cena dohodou</i></h4> 
+            <h4 class="cennik"><p>Cena dohodou</p></h4> 
         </section>
     </div>
 
