--- a/okenna_folia.html
+++ b/okenna_folia.html
@@ -51,7 +51,13 @@
         <div class="wrapper">
             <i id="left" class="fa-solid fa-angle-left fa-lg" style="color: #121212;"></i>
             <div class="carousel">
-                <img src="./img/uvod_fotka_1.jpg" draggable="false">
+                <img src="./img/okenne_folie_1.jpg" draggable="false">
+                <img src="./img/okenne_folie_2.jpg" draggable="false">
+                <img src="./img/okenne_folie_4.jpg" draggable="false">
+                <img src="./img/okenne_folie_5.jpg" draggable="false">
+                <img src="./img/okenne_folie_6.jpg" draggable="false">
+                <img src="./img/okenne_folie_7.jpg" draggable="false">
+                <img src="./img/okenne_folie_8.jpg" draggable="false">
             </div>
             <i id="right" class="fa-solid fa-angle-right fa-lg" style="color: #121212;"></i>
         </div>
