--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
                 <h1>Kontaktujte nás v záujme o nezáväznú cenovú ponuku</h1>
             <p>ALEBO NÁM ZAVOLAJTE NA </p>
             <p><strong>0944 264 904</strong></p>
+                
+                <div class="form">
+                <input type="text" id="name" placeholder="Meno" autocomplete="on" required>
+                <input type="email" id="email" placeholder="Email" autocomplete="off" required>
+                <textarea id="message" placeholder="Ako pomôžeme ?" autocomplete="on" required></textarea>
+                <button onclick="sendMail()">Odoslať</button>
+            </div>
             </div>
         </section>
     </div>
