--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="index.html"><img src="./img/nn_logo.png" height="100px" width="100px"></a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html#sluzby" class="nav-link">Služby</a></li>
-                <li class="nav-item"><a href="index.html#nasapraca" class="nav-link">Naša práca</a></li>
+                <li class="nav-item"><a href="index.html#nasa-praca" class="nav-link">Naša práca</a></li>
                 <li class="nav-item"><a href="index.html#onas" class="nav-link">O nás</a></li>
                 <li class="nav-item"><a href="index.html#kontakt" class="nav-link">Kontakt</a></li>
             </ul>
@@ -92,7 +92,8 @@
 
 
     <!-- Naša práca -->
-    <section class="slider">
+    <section class="slider" id="nasa-praca">
+        <h2>Naša práca</h2>
         <div class="wrapper">
             <i id="left" class="fa-solid fa-angle-left fa-lg" style="color: #121212;"></i>
             <div class="carousel">
