--- a/index.html
+++ b/index.html
@@ -147,5 +147,15 @@
         </div>
         <p>Copyright&copy; 2023 NNDetailing. Všetky práva vyhradené</p>
     </footer>
+
+    <!-- Script for sending mail -->
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("W3LZOJCiTLxV-2pgM");
+        })();
+    </script>
 </body>
 </html>
