--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="mobilestyle.css" type="text/css">
     <script src="app.js" defer></script>
+    <!-- Module Script -->
+    <script type="module" src="./module.js"></script>
     <title>NNDetailing</title>
 </head>
 <body>
