--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5f368fb0a1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="stylesheet" href="mobilestyle.css" type="text/css">
+    <link rel="stylesheet" href="media.css" type="text/css">
     <script src="app.js" defer></script>
     <!-- Module Script -->
     <script type="module" src="./module.js"></script>
@@ -113,7 +113,7 @@
     <!-- Google Maps -->
     <div class="container">
         <section class="find-us">
-            <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5038.466819582826!2d17.813998289067634!3d48.01303992368911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476b75b632f30a3d%3A0x88702919074c6152!2sNN%20detailing!5e0!3m2!1shu!2ssk!4v1680107330800!5m2!1shu!2ssk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+            <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5038.466819582826!2d17.813998289067634!3d48.01303992368911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476b75b632f30a3d%3A0x88702919074c6152!2sNN%20detailing!5e0!3m2!1shu!2ssk!4v1680107330800!5m2!1shu!2ssk" width="550" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
             <div class="find-us-right">
                 <h1>Kontaktujte nás v záujme o nezáväznú cenovú ponuku</h1>
             <p>ALEBO NÁM ZAVOLAJTE NA </p>
