--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
             <p><strong>0944 264 904</strong></p>
                 
                 <div class="form">
-                <input type="text" id="name" placeholder="Meno" autocomplete="on" required>
+                <input type="text" id="name" placeholder="Meno" autocomplete="off" required>
                 <input type="email" id="email" placeholder="Email" autocomplete="off" required>
-                <textarea id="message" placeholder="Ako pomôžeme ?" autocomplete="on" required></textarea>
+                <textarea id="message" placeholder="Ako pomôžeme ?" autocomplete="of" required></textarea>
                 <button onclick="sendMail()">Odoslať</button>
             </div>
             </div>
