--- a/wrap_folia.html
+++ b/wrap_folia.html
@@ -18,7 +18,7 @@
     <!-- Header -->
     <custom-header>
         
-    <custom-header>
+    </custom-header>
 
     <!-- Section Wrap folie -->
     <div class="container">
